add translation strings & create custom view

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -6,7 +6,7 @@
     <string name="title_dashboard">Брижа</string>
     <string name="title_activity_home">Вход</string>
     <string name="password_login_input_hint">Пароль</string>
-    <string name="email_login_input_hint">E-mail</string>
+    <string name="email_login_input_hint">Почта</string>
     <string name="to_registration_button_text">Регистрация</string>
     <string name="login_button_text">Войти</string>
     <string name="general_caption">Общее</string>
@@ -19,4 +19,11 @@
     <string name="user_caption">Аккаунт</string>
     <string name="back_login_button_text">Назад</string>
     <string name="registration_button_text">Зарегистрироваться</string>
+    <string name="general_label">Общее</string>
+    <string name="user_label">Аккаунт</string>
+    <string name="second_name_label">Фамилия:</string>
+    <string name="first_name_label">Имя:</string>
+    <string name="patronymic_label">Отчество:</string>
+    <string name="email_label">Почта:</string>
+    <string name="logout_button_text">Выйти</string>
 </resources>
