--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,11 +37,12 @@
     <!-- Settings fragment -->
     <string name="general_label">General</string>
     <string name="user_label">User account</string>
-    <string name="second_name_label">Second name:</string>
-    <string name="first_name_label">First name:</string>
-    <string name="patronymic_label">Patronymic:</string>
+    <string name="second_name_label">Second name</string>
+    <string name="first_name_label">First name</string>
+    <string name="patronymic_label">Patronymic</string>
 
-    <string name="email_label">E-mail:</string>
+    <string name="email_label">E-mail</string>
+    <string name="passport_label">Passport</string>
 
     <string name="logout_button_text">Logout</string>
 
